--- a/findseven/pom.xml
+++ b/findseven/pom.xml
@@ -3,11 +3,11 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com.routee</groupId>
-        <artifactId>assessment</artifactId>
+        <groupId>com.route</groupId>
+        <artifactId>solidUsingPureJava</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
-    <groupId>com.routee</groupId>
+    <groupId>com.route</groupId>
     <artifactId>findSeven</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <properties>
